--- a/mycss.css
+++ b/mycss.css
@@ -1,5 +1,6 @@
 img {
-  width: 200px;
+  width: 250px;
+  height: 80px;
   float: right
 }
 
@@ -11,7 +12,7 @@ h1 {
   text-shadow: 4px 2px #d8d4e2; 
 }
 
-p{
+p {
   text-indent: 50px;
   text-align: justify;
   letter-spacing: 3px;
